@@ -192,9 +192,6 @@
                     <cp_extra for="zeit.content.cp.interfaces.IArea" id="mostread" />
                 </container>
                 <container cp:type="cardstack" module="cardstack" visible="True" visible_mobile="True" cp:__name__="id-4d606521-99e2-483d-a19d-353089396e89" card_id="kekse-rezept-pecorino-haselnuss-cantucci"/>
-                <container cp:type="cpextra" module="jobbox" visible="True" visible_mobile="True" cp:__name__="id-f7572d4c-2d8d-4432-b8db-3fb3a558fddd">
-                    <cp_extra id="jobbox"/>
-                </container>
             </region>
         </cluster>
 
